--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 At NatureBloom Organics, we believe in the power of nature to nurture your skin. Discover our exquisite range of organic, chemical-free skincare crafted for your well-being and the planet's health.
             </p>
             <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6">
-                <a href="products.html" class="btn-primary inline-block">
+                <a href="product.html" class="btn-primary inline-block">
                     Explore Products
                 </a>
                 <a href="contact.html" class="btn-secondary inline-block">
@@ -130,25 +130,25 @@
                     <img src="https://placehold.co/300x300/E8F5E9/388E3C?text=Rosehip+Facial+Oil" alt="Bottle of NatureBloom Rosehip Facial Oil" class="rounded-lg mb-4 w-48 h-48 object-cover">
                     <h3 class="text-2xl font-semibold mb-2 text-brand-primary">Radiant Rosehip Facial Oil</h3>
                     <p class="text-gray-700 text-center mb-4">A nourishing blend for a luminous, youthful glow.</p>
-                    <a href="products.html#rosehip-oil" class="btn-primary text-sm">Learn More</a>
+                    <a href="Lnightoil.html" class="btn-primary text-sm">Learn More</a>
                 </div>
                 <!-- Product Card 2 -->
                 <div class="bg-white rounded-xl shadow-lg p-6 flex flex-col items-center card">
                     <img src="https://placehold.co/300x300/E8F5E9/388E3C?text=Lavender+Body+Lotion" alt="Tube of NatureBloom Lavender Body Lotion" class="rounded-lg mb-4 w-48 h-48 object-cover">
-                    <h3 class="text-2xl font-semibold mb-2 text-brand-primary">Calming Lavender Body Lotion</h3>
+                    <h3 class="text-2xl font-semibold mb-2 text-brand-primary">Calming Clensar</h3>
                     <p class="text-gray-700 text-center mb-4">Deep hydration with the soothing essence of lavender.</p>
-                    <a href="products.html#lavender-lotion" class="btn-primary text-sm">Learn More</a>
+                    <a href="clensar.html" class="btn-primary text-sm">Learn More</a>
                 </div>
                 <!-- Product Card 3 -->
                 <div class="bg-white rounded-xl shadow-lg p-6 flex flex-col items-center card">
                     <img src="https://placehold.co/300x300/E8F5E9/388E3C?text=Green+Tea+Cleanser" alt="Bottle of NatureBloom Green Tea Cleanser" class="rounded-lg mb-4 w-48 h-48 object-cover">
-                    <h3 class="text-2xl font-semibold mb-2 text-brand-primary">Purifying Green Tea Cleanser</h3>
+                    <h3 class="text-2xl font-semibold mb-2 text-brand-primary">Termeric Face Serum</h3>
                     <p class="text-gray-700 text-center mb-4">Gently cleanse and detoxify for fresh, clear skin.</p>
-                    <a href="products.html#green-tea-cleanser" class="btn-primary text-sm">Learn More</a>
+                    <a href="TfaceSerum.html" class="btn-primary text-sm">Learn More</a>
                 </div>
             </div>
             <div class="mt-12">
-                <a href="products.html" class="btn-secondary inline-block">
+                <a href="product.html" class="btn-secondary inline-block">
                     View All Products
                 </a>
             </div>
