--- a/product.html
+++ b/product.html
@@ -55,7 +55,7 @@
             transform: translateY(-5px);
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
         }
-        /* White Outline Effect for Text */
+        /* White Outline Effect for Text - for potential future use on this page */
         .text-outline-white {
             text-shadow:
                 -1px -1px 0 #FFF,
@@ -74,7 +74,7 @@
             <nav>
                 <ul class="flex space-x-6">
                     <li><a href="index.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Home</a></li>
-                    <li><a href="products.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Products</a></li>
+                    <li><a href="product.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Products</a></li>
                     <li><a href="contact.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Contact</a></li>
                 </ul>
             </nav>
@@ -117,7 +117,7 @@
                         <p class="text-gray-700 text-center mb-2">🧼 Use: Wash your face to remove oil, dirt, and impurities from the night.</p>
                         <p class="text-gray-700 text-center mb-4 flex-grow">💡 Why: Prepares your skin for hydration and protection.</p>
                         <span class="text-xl font-bold text-brand-primary mb-4">$24.00</span>
-                        <button class="btn-primary text-sm">Buy Now</button>
+                        <a href="clensar.html" class="btn-primary text-sm inline-block">Buy Now</a>
                     </div>
 
                     <!-- Product 2: Rose Water Toner -->
@@ -128,7 +128,7 @@
                         <p class="text-gray-700 text-center mb-2">💧 Use: Spray or apply with a cotton pad after cleansing.</p>
                         <p class="text-gray-700 text-center mb-4 flex-grow">💡 Why: Tightens pores and balances skin pH.</p>
                         <span class="text-xl font-bold text-brand-primary mb-4">$18.50</span>
-                        <button class="btn-primary text-sm">Buy Now</button>
+                        <a href="rosewatertoner.html" class="btn-primary text-sm inline-block">Buy Now</a>
                     </div>
 
                     <!-- Product 3: Turmeric Face Serum -->
@@ -139,7 +139,7 @@
                         <p class="text-gray-700 text-center mb-2">✨ Use: Gently pat a few drops onto clean skin.</p>
                         <p class="text-gray-700 text-center mb-4 flex-grow">💡 Why: Brightens skin and helps reduce blemishes or dark spots.</p>
                         <span class="text-xl font-bold text-brand-primary mb-4">$38.00</span>
-                        <button class="btn-primary text-sm">Buy Now</button>
+                        <a href="TfaceSerum.html" class="btn-primary text-sm inline-block">Buy Now</a>
                     </div>
 
                     <!-- Product 4: Hydrating Moisturizer -->
@@ -150,7 +150,7 @@
                         <p class="text-gray-700 text-center mb-2">💦 Use: Apply evenly over face and neck.</p>
                         <p class="text-gray-700 text-center mb-4 flex-grow">💡 Why: Keeps skin nourished and soft throughout the day.</p>
                         <span class="text-xl font-bold text-brand-primary mb-4">$30.00</span>
-                        <button class="btn-primary text-sm">Buy Now</button>
+                        <a href="Moist.html" class="btn-primary text-sm inline-block">Buy Now</a>
                     </div>
 
                     <!-- Product 5: Natural Sunscreen -->
@@ -161,7 +161,7 @@
                         <p class="text-gray-700 text-center mb-2">☀️ Use: Apply generously as the final step before makeup (if any).</p>
                         <p class="text-gray-700 text-center mb-4 flex-grow">💡 Why: Protects skin from harmful UV rays and sun damage.</p>
                         <span class="text-xl font-bold text-brand-primary mb-4">$28.00</span>
-                        <button class="btn-primary text-sm">Buy Now</button>
+                        <a href="sunscreen.html" class="btn-primary text-sm inline-block">Buy Now</a>
                     </div>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                         <p class="text-gray-700 text-center mb-2">🧖 Use: Clean your face to remove pollution, sweat, makeup.</p>
                         <p class="text-gray-700 text-center mb-4 flex-grow">💡 Why: Essential for removing daily impurities and preparing for repair.</p>
                         <span class="text-xl font-bold text-brand-primary mb-4">$24.00</span>
-                        <button class="btn-primary text-sm">Buy Now</button>
+                        <a href="clensar.html" class="btn-primary text-sm inline-block">Buy Now</a>
                     </div>
 
                     <!-- Product 2: Rose Water Toner (Night) -->
@@ -191,7 +191,7 @@
                         <p class="text-gray-700 text-center mb-2">🌸 Use: Calm and refresh your skin after cleansing.</p>
                         <p class="text-gray-700 text-center mb-4 flex-grow">💡 Why: Soothes and prepares skin to absorb night treatments.</p>
                         <span class="text-xl font-bold text-brand-primary mb-4">$18.50</span>
-                        <button class="btn-primary text-sm">Buy Now</button>
+                        <a href="rosewatertoner.html" class="btn-primary text-sm inline-block">Buy Now</a>
                     </div>
 
                     <!-- Product 3: Lavender Night Oil -->
@@ -200,9 +200,9 @@
                         <h4 class="text-2xl font-semibold mb-2 text-brand-primary">Lavender Night Oil</h4>
                         <p class="text-gray-700 text-center mb-2">Made with: Lavender, Argan Oil, Vitamin C</p>
                         <p class="text-gray-700 text-center mb-2">🌙 Use: Massage 2–3 drops gently into your skin before sleep.</p>
-                        <p class="text-gray-700 text-center mb-4 flex-grow">💡 Why: Repairs and rejuvenates your skin overnight.</p>
+                        <p class="text-700 text-center mb-4 flex-grow">💡 Why: Repairs and rejuvenates your skin overnight.</p>
                         <span class="text-xl font-bold text-brand-primary mb-4">$32.00</span>
-                        <button class="btn-primary text-sm">Buy Now</button>
+                        <a href="Lnightoil.html" class="btn-primary text-sm inline-block">Buy Now</a>
                     </div>
                 </div>
             </div>
