--- a/Pregister.html
+++ b/Pregister.html
@@ -110,13 +110,16 @@
                     <textarea id="address" name="address" rows="4" class="w-full px-4 py-3 border border-brand-accent rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-primary resize-y" placeholder="Street Address, City, State, Zip Code" required></textarea>
                 </div>
                 <div class="text-center">
-                    <button type="submit" class="btn-primary inline-block w-full sm:w-auto">
-                        Shop Now
-                    </button>
+                  <a href="FinalThankyou.html">
+  <button type="button" class="btn-primary inline-block w-full sm:w-auto">
+    Shop Now
+  </button>
+</a>
+
                 </div>
             </form>
             <div class="mt-8">
-                <a href="products.html" class="btn-secondary inline-block">Return to Products</a>
+                <a href="product.html" class="btn-secondary inline-block">Return to Products</a>
             </div>
         </div>
     </main>
