--- a/clensar.html
+++ b/clensar.html
@@ -82,7 +82,7 @@
             <nav>
                 <ul class="flex space-x-6">
                     <li><a href="index.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Home</a></li>
-                    <li><a href="products.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Products</a></li>
+                    <li><a href="product.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Products</a></li>
                     <li><a href="contact.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Contact</a></li>
                 </ul>
             </nav>
@@ -111,8 +111,8 @@
 
             <p class="text-2xl font-bold mb-8 text-brand-primary">Price: $24.00</p>
             <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6">
-                <a href="#" class="btn-primary inline-block">Buy Now</a>
-                <a href="products.html" class="btn-secondary inline-block">Return to Products</a>
+                <a href="Pregister.html" class="btn-primary inline-block">Buy Now</a>
+                <a href="product.html" class="btn-secondary inline-block">Return to Products</a>
             </div>
         </div>
     </main>
