--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             <nav>
                 <ul class="flex space-x-6">
                     <li><a href="index.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Home</a></li>
-                    <li><a href="products.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Products</a></li>
+                    <li><a href="product.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Products</a></li>
                     <li><a href="contact.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Contact</a></li>
                 </ul>
             </nav>
@@ -103,9 +103,11 @@
                     <textarea id="message" name="message" rows="6" class="w-full px-4 py-3 border border-brand-accent rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-primary resize-y" placeholder="Tell us how we can help you..." required></textarea>
                 </div>
                 <div class="text-center">
-                    <button type="submit" class="btn-primary inline-block w-full sm:w-auto">
-                        Send Message
-                    </button>
+                   <a href="contactThankyou.html" class="btn-primary inline-block w-full sm:w-auto text-center py-2 px-6 bg-green-600 text-white font-bold rounded-md hover:bg-green-700 transition">
+    Send Message
+</a>
+
+
                 </div>
             </form>
         </div>
