--- a/contactThankyou.html
+++ b/contactThankyou.html
@@ -70,7 +70,7 @@
             <nav>
                 <ul class="flex space-x-6">
                     <li><a href="index.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Home</a></li>
-                    <li><a href="products.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Products</a></li>
+                    <li><a href="product.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Products</a></li>
                     <li><a href="contact.html" class="text-gray-700 hover:text-brand-primary font-semibold transition duration-300">Contact</a></li>
                 </ul>
             </nav>
