--- a/rosewatertoner.html
+++ b/rosewatertoner.html
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <main class="main-content bg-brand-light py-16 md:py-24">
         <div class="container mx-auto px-4 max-w-3xl p-8 rounded-xl shadow-lg bg-white">
             <h1 class="text-5xl font-bold mb-6 text-brand-primary">Rose Water Toner</h1>
-            <img src="https://placehold.co/400x400/C8E6C9/388E3C?text=Rose+Water+Toner" alt="Bottle of NatureBloom Rose Water Toner" class="rounded-lg mb-8 mx-auto w-full max-w-xs h-auto object-cover">
+            <img src="Mamonde Rose Water Toner for Face 250ml….jpeg" alt="Bottle of NatureBloom Rose Water Toner" class="rounded-lg mb-8 mx-auto w-full max-w-xs h-auto object-cover">
             
             <p class="text-lg leading-relaxed mb-4 text-gray-700">
                 Our Rose Water Toner is crafted from pure, steam-distilled rose petals, offering a refreshing and balancing experience for your skin. It helps to restore your skin's natural pH balance after cleansing, tighten pores, and prepare your complexion for serums and moisturizers.
