--- a/TfaceSerum.html
+++ b/TfaceSerum.html
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <main class="main-content bg-brand-light py-16 md:py-24">
         <div class="container mx-auto px-4 max-w-3xl p-8 rounded-xl shadow-lg bg-white">
             <h1 class="text-5xl font-bold mb-6 text-brand-primary">Turmeric Face Serum</h1>
-            <img src="https://placehold.co/400x400/C8E6C9/388E3C?text=Turmeric+Face+Serum" alt="Dropper bottle of NatureBloom Turmeric Face Serum" class="rounded-lg mb-8 mx-auto w-full max-w-xs h-auto object-cover">
+            <img src="Turmeric Facial Serum Benefit_ Brighten Smooth….jpeg" alt="Dropper bottle of NatureBloom Turmeric Face Serum" class="rounded-lg mb-8 mx-auto w-full max-w-xs h-auto object-cover">
             
             <p class="text-lg leading-relaxed mb-4 text-gray-700">
                 Our Turmeric Face Serum is a powerful elixir designed to brighten your complexion and reduce the appearance of dark spots and blemishes. This potent blend harnesses the natural benefits of Turmeric, Saffron, and nourishing Almond Oil to promote an even skin tone and a healthy glow.
