--- a/sunscreen.html
+++ b/sunscreen.html
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <main class="main-content bg-brand-light py-16 md:py-24">
         <div class="container mx-auto px-4 max-w-3xl p-8 rounded-xl shadow-lg bg-white">
             <h1 class="text-5xl font-bold mb-6 text-brand-primary">Natural Sunscreen (SPF 30 or more)</h1>
-            <img src="https://placehold.co/400x400/C8E6C9/388E3C?text=Natural+Sunscreen" alt="Tube of NatureBloom Natural Sunscreen" class="rounded-lg mb-8 mx-auto w-full max-w-xs h-auto object-cover">
+            <img src="__This product is Over-The-Counter (OTC)….jpeg" alt="Tube of NatureBloom Natural Sunscreen" class="rounded-lg mb-8 mx-auto w-full max-w-xs h-auto object-cover">
             
             <p class="text-lg leading-relaxed mb-4 text-gray-700">
                 Our Natural Sunscreen offers broad-spectrum protection from harmful UV rays without the use of harsh chemicals. Formulated with non-nano Zinc Oxide, nourishing Coconut Oil, and antioxidant-rich Green Tea Extract, it creates a physical barrier on your skin to prevent sun damage.
