--- a/Moist.html
+++ b/Moist.html
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <main class="main-content bg-brand-light py-16 md:py-24">
         <div class="container mx-auto px-4 max-w-3xl p-8 rounded-xl shadow-lg bg-white">
             <h1 class="text-5xl font-bold mb-6 text-brand-primary">Hydrating Moisturizer</h1>
-            <img src="https://placehold.co/400x400/C8E6C9/388E3C?text=Hydrating+Moisturizer" alt="Jar of NatureBloom Hydrating Moisturizer" class="rounded-lg mb-8 mx-auto w-full max-w-xs h-auto object-cover">
+            <img src="i love this moisturiser a lot 🤍 #skincare….jpeg" alt="Jar of NatureBloom Hydrating Moisturizer" class="rounded-lg mb-8 mx-auto w-full max-w-xs h-auto object-cover">
             
             <p class="text-lg leading-relaxed mb-4 text-gray-700">
                 Our Hydrating Moisturizer is a rich yet non-greasy cream designed to lock in moisture and deeply nourish dry skin. Formulated with Shea Butter, Jojoba Oil, and Vitamin E, it provides long-lasting hydration, leaving your skin feeling soft, supple, and smooth throughout the day.
