--- a/Lnightoil.html
+++ b/Lnightoil.html
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <main class="main-content bg-brand-light py-16 md:py-24">
         <div class="container mx-auto px-4 max-w-3xl p-8 rounded-xl shadow-lg bg-white">
             <h1 class="text-5xl font-bold mb-6 text-brand-primary">Lavender Night Oil</h1>
-            <img src="https://placehold.co/400x400/C8E6C9/388E3C?text=Lavender+Night+Oil" alt="Bottle of NatureBloom Lavender Night Oil" class="rounded-lg mb-8 mx-auto w-full max-w-xs h-auto object-cover">
+            <img src="🌿 Did You Know_ Lavender Oil is Nature’s Sleep….jpeg" alt="Bottle of NatureBloom Lavender Night Oil" class="rounded-lg mb-8 mx-auto w-full max-w-xs h-auto object-cover">
             
             <p class="text-lg leading-relaxed mb-4 text-gray-700">
                 Our Lavender Night Oil is a luxurious blend designed to calm your skin and promote overnight repair and glow. Infused with soothing Lavender, nourishing Argan Oil, and revitalizing Vitamin C, this oil works while you sleep to rejuvenate your complexion.
