--- a/index.html
+++ b/index.html
@@ -137,21 +137,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Product Card 1 -->
                 <div class="bg-white rounded-xl shadow-lg p-6 flex flex-col items-center card">
-                    <img src="https://placehold.co/300x300/E8F5E9/388E3C?text=Rosehip+Facial+Oil" alt="Bottle of NatureBloom Rosehip Facial Oil" class="rounded-lg mb-4 w-48 h-48 object-cover">
+                    <img src="🌿 Did You Know_ Lavender Oil is Nature’s Sleep….jpeg" alt="Bottle of NatureBloom Rosehip Facial Oil" class="rounded-lg mb-4 w-48 h-48 object-cover">
                     <h3 class="text-2xl font-semibold mb-2 text-brand-primary">Radiant Rosehip Facial Oil</h3>
                     <p class="text-gray-700 text-center mb-4">A nourishing blend for a luminous, youthful glow.</p>
                     <a href="Lnightoil.html" class="btn-primary text-sm">Learn More</a>
                 </div>
                 <!-- Product Card 2 -->
                 <div class="bg-white rounded-xl shadow-lg p-6 flex flex-col items-center card">
-                    <img src="https://placehold.co/300x300/E8F5E9/388E3C?text=Lavender+Body+Lotion" alt="Tube of NatureBloom Lavender Body Lotion" class="rounded-lg mb-4 w-48 h-48 object-cover">
+                    <img src="CeraVe hydrating facial cleanser 🤍.jpeg" alt="Tube of NatureBloom Lavender Body Lotion" class="rounded-lg mb-4 w-48 h-48 object-cover">
                     <h3 class="text-2xl font-semibold mb-2 text-brand-primary">Calming Clensar</h3>
                     <p class="text-gray-700 text-center mb-4">Deep hydration with the soothing essence of lavender.</p>
                     <a href="clensar.html" class="btn-primary text-sm">Learn More</a>
                 </div>
                 <!-- Product Card 3 -->
                 <div class="bg-white rounded-xl shadow-lg p-6 flex flex-col items-center card">
-                    <img src="https://placehold.co/300x300/E8F5E9/388E3C?text=Green+Tea+Cleanser" alt="Bottle of NatureBloom Green Tea Cleanser" class="rounded-lg mb-4 w-48 h-48 object-cover">
+                    <img src="Turmeric Facial Serum Benefit_ Brighten Smooth….jpeg" alt="Bottle of NatureBloom Green Tea Cleanser" class="rounded-lg mb-4 w-48 h-48 object-cover">
                     <h3 class="text-2xl font-semibold mb-2 text-brand-primary">Termeric Face Serum</h3>
                     <p class="text-gray-700 text-center mb-4">Gently cleanse and detoxify for fresh, clear skin.</p>
                     <a href="TfaceSerum.html" class="btn-primary text-sm">Learn More</a>
