--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p class="text-lg leading-relaxed mb-8 text-gray-700">
                 NatureBloom Organics is dedicated to creating skincare that's as kind to your skin as it is to the Earth. We meticulously select the finest organic ingredients, free from harsh chemicals, parabens, and synthetic fragrances. Our commitment extends beyond beauty – it's a promise of purity, sustainability, and ethical practices.
             </p>
-            <img src="https://placehold.co/800x450/C8E6C9/388E3C?text=Natural+Ingredients" alt="Assortment of natural and organic ingredients like herbs, flowers, and essential oils" class="rounded-xl shadow-lg mx-auto w-full h-auto object-cover max-w-2xl">
+            <img src="Стокове фото A set of decorative cosmetics and….jpeg" alt="Assortment of natural and organic ingredients like herbs, flowers, and essential oils" class="rounded-xl shadow-lg mx-auto w-full h-auto object-cover max-w-2xl">
         </div>
     </section>
 
