--- a/Pregister.html
+++ b/Pregister.html
@@ -106,7 +106,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p class="text-lg leading-relaxed mb-8 text-gray-700">
                 Please provide your details to proceed with your order.
             </p>
-            <form action="#" method="POST" class="bg-brand-light p-8 rounded-xl shadow-lg border border-brand-accent">
+            <form id="purchaseForm" action="#" method="POST" class="bg-brand-light p-8 rounded-xl shadow-lg border border-brand-accent">
                 <div class="mb-6 text-left">
                     <label for="name" class="block text-gray-700 text-lg font-semibold mb-2">Full Name</label>
                     <input type="text" id="name" name="name" class="w-full px-4 py-3 border border-brand-accent rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-primary" placeholder="Jane Doe" required>
